--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,45 +1,40 @@
----
 # yaml-language-server: $schema=https://schema.blue-build.org/recipe-v1.json
-# image will be published to ghcr.io/<user>/<name>
-name: template
-# description will be included in the image's metadata
-description: This is my personal OS image.
+name: velyx
+description: Sistema operacional focado em performance extrema para jogos.
 
-# the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 42 # latest is also supported if you want new updates ASAP
+# Base Kinoite (Fedora + KDE Plasma) - A melhor para games
+base-image: ghcr.io/ublue-os/kinoite-main
+image-version: 40 
 
-# module configuration, executed in order
-# you can include multiple instances of the same module
 modules:
   - type: files
     files:
       - source: system
-        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+        destination: /
 
-  - type: dnf
-    repos:
-      copr:
-        - atim/starship
+  - type: rpm-ostree
     install:
-      packages:
-        - micro
-        - starship
-    remove:
-      packages:
-        # example: removing firefox (in favor of the flatpak)
-        # "firefox" is the main package, "firefox-langpacks" is a dependency
-        - firefox
-        - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - gamescope          # Micro-compositor para rodar jogos igual no Steam Deck
+      - mangohud           # Overlay de FPS e performance
+      - goverlay           # Interface para o Mangohud
+      - steam-devices      # Suporte para controles de Xbox, PlayStation e Switch
+      - fastfetch          # Mostra info do sistema no terminal
+      - htop               # Monitor de recursos leve
+      - gamemode           # Otimizador de CPU da Feral Interactive
 
   - type: default-flatpaks
     configurations:
-      - notify: true # Send notification after install/uninstall is finished (true/false)
+      - notify: true
         scope: system
-        # If no repo information is specified, Flathub will be used by default
-        install: # system flatpaks we want all users to have and not remove
+        install:
+          - com.valvesoftware.Steam
+          - com.heroicgameslauncher.hgl
+          - com.discordapp.Discord
           - org.mozilla.firefox
-          - org.gnome.Loupe
-      - scope: user # Also add Flathub user repo, but no user packages
+          - io.github.arminm.hiddn # Para esconder janelas de background
 
-  - type: signing # this sets up the proper policy & signing files for signed images to work fully
+  - type: script
+    scripts:
+      - post-install.sh
+
+  - type: signing
